# LeDXA

./: .gitignore  Dataset.py  Dino_Dataset.py  LICENSE  LeJEPA_dataset.py  README.md  attn_map.py  augmentations.py  build_dataset.py  build_ukbb_npy.py  compute_dexa_stats.py  config.py  diagnose_residuals.py  dino_lejepa_scaling.py  dino_ukbb_extraction.py  dinov3_model.py  extract_dinov3_features.py  finetune_dino.py  generate_age_partitions.py  lejepa_dataset.py  lejepa_extract.py  lejepa_with_val.py  model.py  model_residual_extraction.py  pyproject.toml  requirements.txt  train.py  train_hpp.py
age_prediction_analysis/: aging_rate_dxa_male_phenotype_results.csv  aging_rate_female_phenotype_results.csv  aging_rate_hpp_female_phenotype_results.csv  aging_rate_hpp_male_phenotype_results.csv  baseline_gap_dxa_female_phenotype_results.csv  baseline_gap_female_phenotype_results.csv  baseline_gap_hpp_female_phenotype_results.csv  baseline_gap_male_phenotype_results.csv  drug_bodycomp_G03F_female.csv  medication_sexsplit_paired_gap.csv  medication_sexsplit_paired_gap_no_othe.csv  sarcopenia_hpp_prevalence_by_gap_quartile.csv  sarcopenia_hpp_q4_vs_q1.csv
assets/: README.md
common/: cox_utils.py  plot_style.py  utils.py
csvs/: disease_groups.json  disease_groups_group.json
data/: README.md
downstream/: README.md
fig4c/: fig4c_domain_counts.tsv  fig4c_locus_domains.tsv  fig4c_primary.tsv  fig4c_unmapped_traits.txt
figures/: README.md
metadata/: README.md  disease_display_names.json  disease_display_names_group.json
model/: build_ukbb_extra_targets.py  compute_stats.py  datasets.py  dino_huge_ukbb_extraction.py  dino_ukbb_extraction.py  dinov3_baseline.py  distributed_utils.py  extract_embeddings.py  extract_region_embeddings.py  job_manager.py  lejepa_extract.py  model.py  train.py  train_ukbb.py  trainer.py  ukbb_chunk_targets.py  ukbb_dataset.py
plotting/: cox_model_comparison.py  (+14 more)
(+141 files in other folders)
